Updating dataflow: 10_DF_LogFile_Append

--- a/dataflow/10_DF_LogFile_Append.json
+++ b/dataflow/10_DF_LogFile_Append.json
@@ -113,6 +113,14 @@
 				"     postCommands: [],",
 				"     skipDuplicateMapInputs: true,",
 				"     skipDuplicateMapOutputs: true,",
+				"     mapColumn(",
+				"          ADFName,",
+				"          PipelineName,",
+				"          Status,",
+				"          RunId,",
+				"          TriggerName,",
+				"          ExecutedOn",
+				"     ),",
 				"     partitionBy('hash', 1)) ~> WritetoFile"
 			]
 		}
