Updating pipeline: 10_LogPipeLineExecutionsThruDataFlowTasks

--- a/pipeline/10_LogPipeLineExecutionsThruDataFlowTasks.json
+++ b/pipeline/10_LogPipeLineExecutionsThruDataFlowTasks.json
@@ -148,7 +148,7 @@
 					],
 					"ifTrueActivities": [
 						{
-							"name": "Data flow1",
+							"name": "Data flow When Log ile Exists",
 							"type": "ExecuteDataFlow",
 							"dependsOn": [],
 							"policy": {
