--- a/dataflow/10_DF_LogFile_Append.json
+++ b/dataflow/10_DF_LogFile_Append.json
@@ -20,7 +20,7 @@
 						"referenceName": "ls_azuresynapsecoursedl",
 						"type": "LinkedServiceReference"
 					},
-					"name": "WritetoFile"
+					"name": "sink1"
 				}
 			],
 			"transformations": [
@@ -73,22 +73,22 @@
 				"     ),",
 				"     skipDuplicateMapInputs: true,",
 				"     skipDuplicateMapOutputs: true) ~> RemoveTheDummyColumnFromTheSource",
-				"RemoveTheDummyColumnFromTheSource sink(allowSchemaDrift: false,",
+				"RemoveTheDummyColumnFromTheSource sink(allowSchemaDrift: true,",
 				"     validateSchema: false,",
 				"     format: 'delimited',",
 				"     fileSystem: 'demo',",
-				"     folderPath: 'Output/log/',",
+				"     folderPath: 'Output/log',",
 				"     columnDelimiter: ',',",
 				"     escapeChar: '\\\\',",
 				"     quoteChar: '\\\"',",
-				"     columnNamesAsHeader: true,",
+				"     columnNamesAsHeader: false,",
 				"     partitionFileNames:[($FileName)],",
 				"     umask: 0022,",
 				"     preCommands: [],",
 				"     postCommands: [],",
 				"     skipDuplicateMapInputs: true,",
 				"     skipDuplicateMapOutputs: true,",
-				"     partitionBy('hash', 1)) ~> WritetoFile"
+				"     partitionBy('hash', 1)) ~> sink1"
 			]
 		}
 	}
