--- a/pipeline/21_Dynamic_Column_Mapping_in_Copy_Activity.json
+++ b/pipeline/21_Dynamic_Column_Mapping_in_Copy_Activity.json
@@ -4,112 +4,6 @@
 		"description": "Let Say you have Multiple Excel Files and you want to load those files into respective tables  with following differences\n\n1. Employee.xlsx file data should go to tbl_Employee Table\n\n2.Department.xlsx file data should go to tbl_Department Table\n\n3. All these files have different Column Names . Means File Column Name and  Table Column Names are different .\n\nThis Pipeline will demonstrate that .",
 		"activities": [
 			{
-				"name": "Copy data1",
-				"type": "Copy",
-				"state": "Inactive",
-				"onInactiveMarkAs": "Succeeded",
-				"dependsOn": [],
-				"policy": {
-					"timeout": "0.12:00:00",
-					"retry": 0,
-					"retryIntervalInSeconds": 30,
-					"secureOutput": false,
-					"secureInput": false
-				},
-				"userProperties": [],
-				"typeProperties": {
-					"source": {
-						"type": "ExcelSource",
-						"storeSettings": {
-							"type": "AzureBlobFSReadSettings",
-							"recursive": true,
-							"enablePartitionDiscovery": false
-						}
-					},
-					"sink": {
-						"type": "AzureSqlSink",
-						"writeBehavior": "insert",
-						"sqlWriterUseTableLock": false,
-						"disableMetricsCollection": false
-					},
-					"enableStaging": false,
-					"translator": {
-						"type": "TabularTranslator",
-						"mappings": [
-							{
-								"source": {
-									"name": "empid",
-									"type": "String",
-									"physicalType": "String"
-								},
-								"sink": {
-									"name": "Emp_Id",
-									"type": "Int32",
-									"physicalType": "int"
-								}
-							},
-							{
-								"source": {
-									"name": "empname",
-									"type": "String",
-									"physicalType": "String"
-								},
-								"sink": {
-									"name": "Emp_Name",
-									"type": "String",
-									"physicalType": "varchar"
-								}
-							},
-							{
-								"source": {
-									"name": "gender",
-									"type": "String",
-									"physicalType": "String"
-								},
-								"sink": {
-									"name": "Emp_Gender",
-									"type": "String",
-									"physicalType": "varchar"
-								}
-							},
-							{
-								"source": {
-									"name": "deptid",
-									"type": "String",
-									"physicalType": "String"
-								},
-								"sink": {
-									"name": "Dept_Id",
-									"type": "Int32",
-									"physicalType": "int"
-								}
-							}
-						],
-						"typeConversion": true,
-						"typeConversionSettings": {
-							"allowDataTruncation": true,
-							"treatBooleanAsNumber": false
-						}
-					}
-				},
-				"inputs": [
-					{
-						"referenceName": "ds_demo_Dynamic_Folder",
-						"type": "DatasetReference",
-						"parameters": {
-							"parFolderName": "21_Dynamic_Column_Mapping",
-							"parFileName": "Employee.xlsx"
-						}
-					}
-				],
-				"outputs": [
-					{
-						"referenceName": "ds_AzureSQLDB",
-						"type": "DatasetReference"
-					}
-				]
-			},
-			{
 				"name": "Get Metadata1",
 				"type": "GetMetadata",
 				"dependsOn": [],
@@ -140,8 +34,188 @@
 						"type": "DelimitedTextReadSettings"
 					}
 				}
+			},
+			{
+				"name": "ForEach1",
+				"type": "ForEach",
+				"dependsOn": [
+					{
+						"activity": "Get Metadata1",
+						"dependencyConditions": [
+							"Succeeded"
+						]
+					}
+				],
+				"userProperties": [],
+				"typeProperties": {
+					"items": {
+						"value": "@activity('Get Metadata1').output.childItems",
+						"type": "Expression"
+					},
+					"isSequential": true,
+					"activities": [
+						{
+							"name": "Copy data1",
+							"type": "Copy",
+							"state": "Inactive",
+							"onInactiveMarkAs": "Succeeded",
+							"dependsOn": [
+								{
+									"activity": "Script1",
+									"dependencyConditions": [
+										"Succeeded"
+									]
+								}
+							],
+							"policy": {
+								"timeout": "0.12:00:00",
+								"retry": 0,
+								"retryIntervalInSeconds": 30,
+								"secureOutput": false,
+								"secureInput": false
+							},
+							"userProperties": [],
+							"typeProperties": {
+								"source": {
+									"type": "ExcelSource",
+									"storeSettings": {
+										"type": "AzureBlobFSReadSettings",
+										"recursive": true,
+										"enablePartitionDiscovery": false
+									}
+								},
+								"sink": {
+									"type": "AzureSqlSink",
+									"writeBehavior": "insert",
+									"sqlWriterUseTableLock": false,
+									"disableMetricsCollection": false
+								},
+								"enableStaging": false,
+								"translator": {
+									"type": "TabularTranslator",
+									"mappings": [
+										{
+											"source": {
+												"name": "empid",
+												"type": "String",
+												"physicalType": "String"
+											},
+											"sink": {
+												"name": "Emp_Id",
+												"type": "Int32",
+												"physicalType": "int"
+											}
+										},
+										{
+											"source": {
+												"name": "empname",
+												"type": "String",
+												"physicalType": "String"
+											},
+											"sink": {
+												"name": "Emp_Name",
+												"type": "String",
+												"physicalType": "varchar"
+											}
+										},
+										{
+											"source": {
+												"name": "gender",
+												"type": "String",
+												"physicalType": "String"
+											},
+											"sink": {
+												"name": "Emp_Gender",
+												"type": "String",
+												"physicalType": "varchar"
+											}
+										},
+										{
+											"source": {
+												"name": "deptid",
+												"type": "String",
+												"physicalType": "String"
+											},
+											"sink": {
+												"name": "Dept_Id",
+												"type": "Int32",
+												"physicalType": "int"
+											}
+										}
+									],
+									"typeConversion": true,
+									"typeConversionSettings": {
+										"allowDataTruncation": true,
+										"treatBooleanAsNumber": false
+									}
+								}
+							},
+							"inputs": [
+								{
+									"referenceName": "ds_demo_Dynamic_Folder",
+									"type": "DatasetReference",
+									"parameters": {
+										"parFolderName": "21_Dynamic_Column_Mapping",
+										"parFileName": {
+											"value": "@activity('Script1').output.SourceFileName",
+											"type": "Expression"
+										}
+									}
+								}
+							],
+							"outputs": [
+								{
+									"referenceName": "ds_AzureSQLDB",
+									"type": "DatasetReference"
+								}
+							]
+						},
+						{
+							"name": "Script1",
+							"type": "Script",
+							"dependsOn": [],
+							"policy": {
+								"timeout": "0.12:00:00",
+								"retry": 0,
+								"retryIntervalInSeconds": 30,
+								"secureOutput": false,
+								"secureInput": false
+							},
+							"userProperties": [],
+							"linkedServiceName": {
+								"referenceName": "ls_AzureSQLDB",
+								"type": "LinkedServiceReference"
+							},
+							"typeProperties": {
+								"scripts": [
+									{
+										"parameters": [
+											{
+												"name": "SourceFileName",
+												"type": "String",
+												"value": {
+													"value": "@item().name",
+													"type": "Expression"
+												},
+												"direction": "Input"
+											}
+										],
+										"type": "Query",
+										"text": "select SourceFileName ,Target_Table_Schema  , Target_Table_Name ,Mapping from tbl_Mapping where SourceFileName = @SourceFileName"
+									}
+								],
+								"scriptBlockExecutionTimeout": "02:00:00"
+							}
+						}
+					]
+				}
 			}
 		],
+		"variables": {
+			"varMappingJSON": {
+				"type": "String"
+			}
+		},
 		"folder": {
 			"name": "ADF Practice"
 		},
